<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE1E1"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRain"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="5dp"
            app:cardCornerRadius="12dp"

            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF8989"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imgUmbrella"
                    android:layout_width="113dp"
                    android:layout_height="101dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/rainImg"
                    app:srcCompat="@drawable/umbrella" />

                <TextView
                    android:id="@+id/txtRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/txtRain"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvTrain"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="12dp"

            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvRain"
            app:layout_constraintStart_toStartOf="@id/cvRain"
            app:layout_constraintTop_toBottomOf="@+id/cvRain"
            tools:layout_constraintTop_toBottomOf="@id/cvRain">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF9C9C"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imgTrain"
                    android:layout_width="113dp"
                    android:layout_height="101dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/trainImg"
                    app:srcCompat="@drawable/train" />

                <TextView
                    android:id="@+id/txtTrain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/txtTrain"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvForest"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="12dp"

            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvTrain"
            app:layout_constraintStart_toStartOf="@id/cvTrain"
            app:layout_constraintTop_toBottomOf="@+id/cvTrain"
            tools:layout_constraintTop_toBottomOf="@id/cvTrain">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFB4B4"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imgTree"
                    android:layout_width="113dp"
                    android:layout_height="101dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/trainImg"
                    app:srcCompat="@drawable/forest" />

                <TextView
                    android:id="@+id/txtTree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/txtTree"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>